--- a/css/style.css
+++ b/css/style.css
@@ -311,13 +311,27 @@ bottom: 0; }
 
 .cursos, .seminarios {
   border-top: 5px var(--laranjaCTAbg) solid;
+  background: cover;
+  background-size: 100%;
+  background-position: center;
+  transition: all .2s ease-in-out;
+  padding: 1rem;
 }
 
-.cursos > .hero {
+.cursos > h3, .seminarios > h3 {
+  margin-bottom: 2rem;
+}
+
+.cursos:hover, .seminarios:hover {
+  background-size: 110%;
+  background-position: center;
+}
+
+.cursos {
   background-image: url(../img/cursos.jpg);
 }
 
-.seminarios > .hero {
+.seminarios {
   background-image: url('../img/seminarios.jpg');
 }
 
