--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,24 +1,17 @@
-<nav>
-  <div id="hidden">
-    <div class="menu">
-      <a  class="menu-item animsition-link" href="{{ site.baseurl }}/quem-somos/">Quem somos</a>
-      <a  class="menu-item animsition-link" href="{{ site.baseurl }}/cursos/">Cursos</a>
-      <a  class="menu-item animsition-link" href="{{ site.baseurl }}/seminarios/">Seminários</a>
-      <a  class="menu-item animsition-link" href="{{ site.baseurl }}/artigos/">Artigos</a>
-      <a  class="menu-item animsition-link" href="{{ site.baseurl }}/monografias/">Monografias</a>
-    </div>
-  </div>
-  <div class="navbar">
-    <div class="nav-item">
-      <a  href="{{ site.baseurl }}/cursos/" class="call">Estude com a gente</a>
-    </div>
-    <div id="menu-button" class="nav-item">
-      <div class="hamburger hamburger--minus">
-        <div class="hamburger-box">
-          <div class="hamburger-inner"></div>
-        </div>
-      </div>
-      <span>Menu</span>
-    </div>
-  </div>
-</nav>
+<ul>
+  <li>
+    <a  href="{{ site.baseurl }}/cursos/" class="call">Estude com a gente</a>
+  </li>
+  <li>
+    <a href="{{ site.baseurl }}/seminarios/">Leve o Eirene até sua igreja</a>
+  </li>
+  <li>
+    <a href="{{ site.baseurl }}/quem-somos/">Quem somos</a>
+  </li>
+  <li>
+    <a href="{{ site.baseurl }}/artigos/">Artigos</a>
+  </li>
+  <li>
+    <a href="{{ site.baseurl }}/monografias/">Monografias</a>
+  </li>
+</ul>
