--- a/css/style.css
+++ b/css/style.css
@@ -72,21 +72,12 @@ li {
   margin-left: 1em;
 }
 
-.title h1, .title h2 { margin: 0; }
-
-.title h1 { 
-  font-family: Chivo, Verdana, sans-serif;
-  font-weight: regular;
-  font-style: italic;
-  font-size: 1.2rem;
-}
-
 .title h2 { 
   font-size: 1rem;
   font-weight: normal;
 }
 
-.cursos h3, .seminarios h3 {
+.box h3 {
   background: var(--titleBg);
   display: inline-flex;
   font-size: 2rem;
@@ -160,6 +151,7 @@ header{
   background: var(--headerBg);
   width: 100%;
   display: flex;
+  align-items: baseline;
 }
 
 .brand { 
@@ -169,138 +161,13 @@ header{
 
 .brand img {width: 78px;}
 
-.title { 
-  flex: 0 0 70%;
-  justify-content: end;
-  padding: 1rem 0 0 1rem;
-}
 
 /* NAV */
-
-nav { 
-  background: var(--azul2ndTitleBG);
-  font-family: Unna, serif;
-  display: grid; 
-  grid-row: 3;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  font-size: 1.4em;
-  box-shadow: 0 -2px 6px rgba(0, 0, 0, .2);
-  z-index: 1;
+nav > ul > li { 
+  display: inline-flex;
+  padding-bottom: .5rem; 
 }
 
-.nav-item{
-  cursor: pointer;
-  display: flex;
-  flex: 0 0 50%;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-
-.nav-item:first-child{
-  box-shadow: 2px 0px 6px rgba(0, 0, 0, .2);
-}
-
-.nav-item:hover { 
-  background: #3f748b;
-  box-shadow: 2px 0px 6px rgba(0, 0, 0, .4);
-}
-
-.menu-item {
-  padding: .5em;
-  text-align: right;
-  border-top: solid 1px;
-}
-
-.menu-item:last-child {
-  border-bottom: solid 1px;
-}
-
-.navbar{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 2.4em;
-}
-
-@media screen and (max-width: 380px) {
-  .nav-item {
-    font-size: 1.2rem;
-  }
-}
-
-.menu {
-  display: grid;
-  grid-row: 5;
-}
-
-#hidden {display: none;}
-
-/* Hamburger Icon */
-
-/* Hamburger */
-
-.hamburger {
-  padding: 15px 15px;
-  display: inline-block;
-  cursor: pointer;
-  transition-property: opacity, filter;
-  transition-duration: 0.15s;
-  transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  overflow: visible; }
-  .hamburger:hover {
-    opacity: 0.7; }
-
-.hamburger-box {
-  width: 40px;
-  height: 24px;
-  display: inline-block;
-  position: relative; }
-
-.hamburger-inner {
-  display: block;
-  top: 50%;
-  margin-top: -2px; }
-  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-    width: 40px;
-    height: 4px;
-    background-color: #000;
-    border-radius: 4px;
-    position: absolute;
-    transition-property: transform;
-    transition-duration: 0.15s;
-    transition-timing-function: ease; }
-  .hamburger-inner::before, .hamburger-inner::after {
-    content: "";
-    display: block; }
-  .hamburger-inner::before {
-    top: -10px; }
-  .hamburger-inner::after {
-bottom: -10px; }
-
-/*
-   * Minus
-   */
-.hamburger--minus .hamburger-inner::before, .hamburger--minus .hamburger-inner::after {
-  transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear; }
-
-.hamburger--minus.is-active .hamburger-inner::before, .hamburger--minus.is-active .hamburger-inner::after {
-  opacity: 0;
-  transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear; }
-
-.hamburger--minus.is-active .hamburger-inner::before {
-  top: 0; }
-
-.hamburger--minus.is-active .hamburger-inner::after {
-bottom: 0; }
 
 /* CONTENT */
 
@@ -309,69 +176,38 @@ bottom: 0; }
   box-shadow: 0 -7px 7px rgba(0, 0, 0, .1 );
 }
 
-.cursos, .seminarios {
-  border-top: 5px var(--laranjaCTAbg) solid;
+.box {
   background: cover;
   background-size: 100%;
   background-position: center;
   transition: all .2s ease-in-out;
-  padding: 1rem;
+  display: grid;
+  grid-template-columns: 
+    minmax(1rem, 1fr) minmax(auto, 58rem) minmax(1rem, 1fr);
 }
 
-.cursos > h3, .seminarios > h3 {
+.box > .box--content {
+  grid-column: 2/3;
+}
+
+.box > h3 {
   margin-bottom: 2rem;
 }
 
-.cursos:hover, .seminarios:hover {
+.box:hover {
   background-size: 110%;
   background-position: center;
 }
 
-.cursos {
+.box--cursos {
   background-image: url(../img/cursos.jpg);
 }
 
-.seminarios {
+.box--seminarios {
   background-image: url('../img/seminarios.jpg');
 }
 
-.cursos > .hero, .seminarios > .hero {
-    background-size: 100%;  
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 0; 
-    width: 100%; 
-    height: 100vh; 
-    display: table;
-}
 
-@media screen and (min-width: 800px) {
-  .brand img { width: 9rem; margin-bottom: .5rem;}
-
-  .main-content { 
-    display: grid;
-    grid-template-areas:  
-      'cursos'
-      'seminarios'
-      'noticias'
-      'publicacoes';
-    grid-gap: 1rem;
-    justify-content: center;
-    align-items: start;
-  }
-
-  .cursos { grid-area: cursos; }
-  .seminarios { grid-area: seminarios; }
-  .noticias { grid-area: noticias; }
-  .publicacoes { grid-area: publicacoes; }
-
-  .noticias > h3 { text-align: center; }
-
-  .hero, .cursos, .seminarios { 
-    margin: 0 auto; 
-    max-width: 38rem;
-  }
-}
 
 .copy {
   margin: 1rem;
