--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,9 @@
     <nav>
       {% include nav.html %}
     </nav>
+
+    <div class="hero hero--index">
+      <h1>Levando famílias à harmonia</h1>
+      <h2>Nós ajudamos leigos e profissionais da família a entenderem o contexto e a história das pessoas para que possam ter uma vida e relacionamentos saudáveis.</h2>
+    </div>
   </header>
