--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ img { width: 100%; }
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: .5rem;
   grid-template-areas: 
-    'nav nav nav nav'
     'header header header header'
     'content content content content'
     'footer footer footer footer';
@@ -148,22 +147,36 @@ nav a {
 /* HEADER */
 
 header{
-  background: var(--headerBg);
+  background: var(--azul2ndTitleBG);
   width: 100%;
-  display: flex;
+  display: grid;
   align-items: baseline;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: auto 300px;
 }
 
 .brand { 
-  flex: 0 0 30%;
+  grid-column: 1/3;
+  grid-row: 1/2;
   padding: 1em 0 0 1em; 
 }
 
 .brand img {width: 78px;}
 
+nav {
+  grid-column: 3/ last-line;
+  grid-row: 1/2;
+}
+
+.hero {
+  grid-column: 1/ last-line;
+  grid-row: 2/ last-line;
+}
+
 
 /* NAV */
-nav > ul > li { 
+nav > ul > li {
+
   display: inline-flex;
   padding-bottom: .5rem; 
 }
