Added cards to news, finished the publishing part and perfected the CTA area

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,4 +8,5 @@
 <script src="{{ site.baseurl }}/js/hamburger.js"></script>
 <script src="{{ site.baseurl }}/js/menu.js"></script>
 <script src="{{ site.baseurl }}/js/touch.js"></script>
+<script src="{{ site.baseurl }}/js/scroll-anim.js"></script>
 </html>
