--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,6 @@
 
     <div class="hero hero--index">
       <h1>Levando famílias à harmonia</h1>
-      <h2>Nós ajudamos leigos e profissionais da família a entenderem o contexto e a história das pessoas para que possam ter uma vida e relacionamentos saudáveis.</h2>
+      <h2>Entender o contexto e a história de uma família é essencial para que leigos e profissionais ajudem as pessoas a terem uma vida e relacionamentos saudáveis.</h2>
     </div>
   </header>
