--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,17 +1,11 @@
-<ul>
-  <li>
-    <a  href="{{ site.baseurl }}/cursos/" class="call">Estude com a gente</a>
-  </li>
-  <li>
-    <a href="{{ site.baseurl }}/seminarios/">Leve o Eirene até sua igreja</a>
-  </li>
-  <li>
-    <a href="{{ site.baseurl }}/quem-somos/">Quem somos</a>
-  </li>
-  <li>
-    <a href="{{ site.baseurl }}/artigos/">Artigos</a>
-  </li>
-  <li>
-    <a href="{{ site.baseurl }}/monografias/">Monografias</a>
-  </li>
-</ul>
+<div class="menu-item">
+  <a  href="{{ site.baseurl }}/cursos/" class="call">Estude com a gente</a>
+
+  <a href="{{ site.baseurl }}/seminarios/">Leve o Eirene até sua igreja</a>
+
+  <a href="{{ site.baseurl }}/quem-somos/">Quem somos</a>
+
+  <a href="{{ site.baseurl }}/artigos/">Artigos</a>
+
+  <a href="{{ site.baseurl }}/monografias/">Monografias</a>
+</div>
