--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 {% include header.html %}
   
-<div class="content">
+<div class="content a-slideOut">
   {{ content }}
 </div>
 
