--- a/_layouts/inscreva.html
+++ b/_layouts/inscreva.html
@@ -1,12 +1,15 @@
 ---
 layout: default
 ---
-<div class="hero">
-  <img src="{{ page.img }}" alt="{{ page.imgalt }}">
-</div>
+
+<div class="post-img"><img src="{{ page.img }}" alt=""></div>
 
 <div class="copy">
+    <h1>{{ page.title }}</h1>
+
     {{ content }}
     
     {% include cta.html %}
 </div>
+  
+<nav class="breadcrumb"><span>{{ page.type }} » {{ page.title }}</span></nav>
