--- a/_layouts/main-page.html
+++ b/_layouts/main-page.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 ---
-<div class="{{ page.hero }}">
-  <h3>{{ page.title }}</h3>
-</div>
 
-<div class="copy">{{ page.meta | markdownify }}</div>
+<div class="copy">
+  <h1>{{ page.title }}</h1>
+  {{ page.meta | markdownify }}
+
+</div>
 
 {{ content }}
