changed baseurl for url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,16 +5,16 @@
  
 </body>
 
-<script src="{{ site.baseurl }}/js/hamburger.js"></script>
-<script src="{{ site.baseurl }}/js/menu.js"></script>
-<script src="{{ site.baseurl }}/js/touch.js"></script>
-<script src="{{ site.baseurl }}/js/scroll-anim.js"></script>
-<script src="{{ site.baseurl }}/js/breadcrumb.js"></script>
-<script src="{{ site.baseurl }}/js/swup.js"></script>
+<script src="{{ site.url }}/js/hamburger.js"></script>
+<script src="{{ site.url }}/js/menu.js"></script>
+<script src="{{ site.url }}/js/touch.js"></script>
+<script src="{{ site.url }}/js/scroll-anim.js"></script>
+<script src="{{ site.url }}/js/breadcrumb.js"></script>
+<script src="{{ site.url }}/js/swup.js"></script>
 <script>var swup = new Swup() </script>
 
 {% if page.layout == 'inscreva' %}
-  <script src="{{ site.baseurl }}/js/tingle.min.js"></script>
+  <script src="{{ site.url }}/js/tingle.min.js"></script>
   <script type="text/javascript">
 
     /* Modal big */
