--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   {% if page.type == 'index' %}
     <div class="hero hero--index">
       <div class="brand--index">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ '/img/logo-white.png' | prepend: site.baseurl }}" alt="Logo do Eirene"></a>
+        <a href="{{ site.url }}/index.html"><img src="{{ '/img/logo-white.png' | prepend: site.url }}" alt="Logo do Eirene"></a>
       </div>
       
       <h2>Entender o contexto e a história de uma família é essencial para que profissionais e profissionais ajudem as pessoas a terem uma vida e relacionamentos saudáveis.</h2>
@@ -11,7 +11,7 @@
   {% else %}
     
     <div class="brand">
-      <a href="{{ site.baseurl }}/index.html"><img src="{{ '/img/logo-white-small.png' | prepend: site.baseurl }}" alt="Logo do Eirene"></a>
+      <a href="{{ site.url }}/index.html"><img src="{{ '/img/logo-white-small.png' | prepend: site.url }}" alt="Logo do Eirene"></a>
     </div>
 
     <h1 class="header--title">Levando famílias à harmonia</h1>
