--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <div class="menu-item">
-  <a  href="{{ site.baseurl }}/cursos/" class="call">Estude com a gente</a>
+  <a  href="{{ site.url }}/cursos/" class="call">Estude com a gente</a>
 
-  <a href="{{ site.baseurl }}/seminarios/">Leve o Eirene até sua igreja</a>
+  <a href="{{ site.url }}/seminarios/">Leve o Eirene até sua igreja</a>
 
-  <a href="{{ site.baseurl }}/quem-somos/">Quem somos</a>
+  <a href="{{ site.url }}/quem-somos/">Quem somos</a>
 
-  <a href="{{ site.baseurl }}/artigos/">Artigos</a>
+  <a href="{{ site.url }}/artigos/">Artigos</a>
 
-  <a href="{{ site.baseurl }}/monografias/">Monografias</a>
+  <a href="{{ site.url }}/monografias/">Monografias</a>
 </div>
