--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta name="description" content="{% if page.meta %}{{ page.meta | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="keywords" content="{{ site.keywords }}" />
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
   <title>{{ site.title }} | {{ page.title }}</title>
-  <link rel="stylesheet" type="text/css" href="{{ '/css/style.css' | prepend: site.baseurl }}" />
+  <link rel="stylesheet" type="text/css" href="{{ '/css/style.css' | prepend: site.url }}" />
 
   {% if page.layout == 'inscreva' %}
-    <link rel="stylesheet" href="{{ '/css/tingle.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ '/css/tingle.css' | prepend: site.url }}">
   {% endif %}
 
 
