--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -6,7 +6,7 @@ layout: default
   <h2>{{ page.title }}</h2>
   
   {% if page.img %}
-    <img src="{{ site.baseurl }}/{{ page.img }}" alt="">
+    <img src="{{ site.url }}/{{ page.img }}" alt="">
   {% endif %}
 
   {{ content }}
