--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ li {
 
 /* Buttons */
 
-a.button--dark {
+a.button--dark, input[type=submit] {
   color: var(--branco);
   background: var(--laranja);
   padding: 1rem;
@@ -166,7 +166,7 @@ a.button--dark {
   box-shadow: 4px 4px 2px rgba(0,0,0,.3);
 }
 
-a.button--dark:hover {
+a.button--dark:hover, input[type=submit]:hover {
   color: var(--branco);
   background: var(--text);
   padding: 1rem;
@@ -452,3 +452,30 @@ html.is-animating .a-slideOut {
 }
 
 .modal-content { display: none; }
+
+/* Forms */
+
+.formulario {
+  position: relative;
+  padding-top: 1.5em;
+}
+
+label {
+  font-size: .8rem;
+}
+
+
+input[type=text], input[type=email] {
+  border-bottom: 2px solid var(--laranja);
+  border-left: none;
+  border-top: none;
+  border-right: none;
+  font-size: 1rem;
+  padding: .4rem;
+  width: 100%;
+  transition: all .5s easeOut;
+}
+
+input[type=text]:focus, input[type=email]:focus {
+  border-bottom: 2px solid var(--azulMedio);
+}
