--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,4 +29,14 @@
     
   </script>
 {% endif %}
+  <script type="text/javascript">
+    function showLinks() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block"
+      }
+    }
+  </script>
 </html>
