--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,8 @@ nav {
 
 @media screen and (max-width: 820px) {
   .hiddenOnMobile {
-    display: none;
+    opacity: 0;
+    transition: opacity 1s;
   }
 
   .hiddenOnMobile--item {
