--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,10 +34,10 @@
       var x = document.getElementById("myLinks");
       if (x.style.opacity === "1") {
         x.style.opacity = "0";
-        x.transition = "opacity 1s";
+        x.style.height = "0";
       } else {
         x.style.opacity = "1";
-        x.transition = "opacity 1s";
+        x.style.height = "16rem";
       }
     }
   </script>
