tweakde header for mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,9 @@
         <a href="{{ site.url }}/index.html"><img src="{{ '/img/logo-white.png' | prepend: site.url }}" alt="Logo do Eirene"></a>
       </div>
       
-      <h2>Entender o contexto e a história de uma família é essencial para que profissionais e profissionais ajudem as pessoas a terem uma vida e relacionamentos saudáveis.</h2>
+      <h2>{{ site.description }}</h2>
+
+    <!--<h2>Para relacionamentos saudáveis é essencial conhecer o contexto e a história de uma família.</h2>-->
     </div>
   {% else %}
     
