--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ nav a:last-child {
 }
 
 nav a:hover {
-  color: var(--laranja);
+  color: var(--azulClaro);
   border-bottom: 1px solid var(--laranja);
   background: var(--text);
 }
@@ -225,18 +225,24 @@ header {
 .brand img { width: 120px; }
 
 .header--title {
-  grid-column: 4/12
+  grid-column: 4/12;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.brand, .header--title {
+  padding: 1rem 0;
 }
 
 
 nav {
   grid-column: 1/ -1;
   padding: 1rem;
+  padding-bottom: 0;
   background: var(--azulClaro);
   width: 100%;
   display: flex;
   justify-content: center; 
-  mix-blend-mode: difference;
 }
 
 .showOnMobile {
@@ -251,12 +257,16 @@ nav {
   nav {
     display: grid;
     grid-template-rows: auto auto;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-items: center;
+    padding: 0;
   }
 
   .alwaysShow {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/2;
+    margin-top: 0;
   }
 
   .hiddenOnMobile {
@@ -276,16 +286,23 @@ nav {
 
   .showOnMobile {
     display: inline;
-    height: 2.7rem;
     border: solid 1px var(--text);
     border-radius: 3px;
     padding: .6rem;
-    margin-top: -0.5rem;
-    grid-column: 2/3;
+    grid-column: 3/4;
     grid-row: 1/2;
+    justify-self: center;
   }
 
   nav a { border-left: 0; }
+  
+  header {
+    grid-gap: 1rem;
+  }
+
+  .header--title {
+    font-size: 1.5rem;    
+  }
 
 }
 
