--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,8 @@
 
   <a class="hiddenOnMobile--item" href="{{ site.url }}/quem-somos/">Quem somos</a>
 
+  <a class="hiddenOnMobile--item" href="{{ site.url }}/professores/">Professores</a>
+
   <a class="hiddenOnMobile--item" href="{{ site.url }}/artigos/">Artigos</a>
 
   <a class="hiddenOnMobile--item" href="{{ site.url }}/monografias/">Monografias</a>
