visual tweaks in agenda

--- a/_includes/agenda.html
+++ b/_includes/agenda.html
@@ -1,4 +1,5 @@
 <div class="agenda-item">
+	<div class="bd-small"></div>
   <h2>{{ agenda.curso }}</h2>
   <p>{{ agenda.date }} em {{agenda.cidade}}, {{agenda.estado}}</p>
   <p><em>Organizado por {{ agenda.owner }}.</em></p>
