--- a/css/style.css
+++ b/css/style.css
@@ -394,16 +394,23 @@ nav {
 .agenda h1 {
   margin: 1.4rem 0 0;
   color: var(--laranja);
-}
-
-.agenda h2 {
-  margin: 1rem 0 .5rem;
   border-top: 2px solid;
   padding: .2rem;
 }
 
+.agenda h2 {
+  margin: 0.3rem 0 .5rem;
+  color: var(--azulMedio);
+}
+
 .agenda p {
   margin-bottom: .5rem;
+}
+
+.bd-small {
+  border-top: 2px solid var(--azulMedio);
+  width: 2rem; 
+  margin-top: 1rem;
 }
 
 .box h4 {
