--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,6 +11,7 @@
   <a class="hiddenOnMobile--item" href="{{ site.url }}/artigos/">Artigos</a>
 
   <a class="hiddenOnMobile--item" href="{{ site.url }}/monografias/">Monografias</a>
+  <a class="hiddenOnMobile--item" href="{{ site.url }}/#agenda">Agenda</a>
 </div>
 
 <a href="javascript:void(0);" class="showOnMobile" onclick="showLinks()">Menu</a>
